welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.code
def withoutDoubles(die1:Int, die2:Int, noDoubles:Boolean):Int = {
	if ( die1==die2 && noDoubles) {
		return die2+die%6+1
	}else {
		return die1+die2
	}
}
